<resources>
    <string name="app_name">乔木社区</string>
    <string name="my_arbur">我的社区</string>
    <string name="phonenumber" >手机号</string>
    <string name="inputphonenumber" >请输入密码</string>
    <string name="srock_title_money">我的积分</string>
    <string name="home_user_business_small">我的申请</string>
    <string name="mine_identification">信息认证</string>
    <string name="securitySet">安全设置</string>
    <string name="aboutApp">关于</string>
    <string name="no_msg">暂时没有新消息</string>

    <string name="userPhone">请输入手机号</string>

    <string name="news">最新资讯</string>
    <!--功能按钮-->
    <string name="policyNotice">政策公告</string>
    <string name="homeworkDiscuss">家事讨论</string>
    <string name="polyLive">七彩生活</string>
    <string name="shareInformation">兴趣交流</string>
    <string name="idleshare">闲置分享</string>
    <string name="moneyManage">理财交流</string>

    <string name="login">登陆</string>
    <string name="register">注册</string>
    <!--消息-->
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片消息]</string>
    <string name="video">[视频通话]</string>
    <string name="file">[文件消息]</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="expression">[表情]</string>




    <string-array name="data">
        <item>最新发帖</item>
        <item>最新回复</item>
        <item>最多点击</item>
        <item>最多回复</item>
    </string-array>


    <!--图片-->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="__picker_title">图片</string>
    <string name="__picker_delete">删除</string>
    <string name="__picker_done">完成</string>
    <string name="__picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_undo">撤消</string>
    <string name="__picker_deleted_a_photo">删除了一张图片</string>
    <string name="__picker_confirm_to_delete">确认删除？</string>
    <string name="__picker_yes">确定</string>
    <string name="__picker_cancel">取消</string>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="__picker_image_count">%1$d张</string>

    <!-- 提示 -->
    <string name="add_community_number">新增社区成员</string>
</resources>
